--- a/AlpayMakina/AlpayMakina/Areas/Admin/Views/SubCategory/UpdateSubCategory.cshtml
+++ b/AlpayMakina/AlpayMakina/Areas/Admin/Views/SubCategory/UpdateSubCategory.cshtml
@@ -20,9 +20,8 @@
             </div>
             <div class="form-group">
                 <label for="CategoryId">Kategori</label>
-                <input type="text" class="form-control" id="CategoryId" asp-for="CategoryId" placeholder="Kategori Seçiniz">
+                @Html.DropDownListFor(x=>x.CategoryId,(List<SelectListItem>)ViewBag.Category,new {@class="form-control"})
             </div>
-
             <button type="submit" class="btn btn-primary waves-effect waves-light btnConfirm">Güncelle</button>
         </form>
 
