--- a/AlpayMakina/AlpayMakina/Areas/Admin/_ViewImports.cshtml
+++ b/AlpayMakina/AlpayMakina/Areas/Admin/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using AlpayMakina.Dtos.SocialMediaDtos
 @using AlpayMakina.Dtos.CompanyInformationDtos
 @using AlpayMakina.Dtos.SubCategoryDtos
+@using AlpayMakina.Dtos.UserDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
