--- a/AlpayMakina/AlpayMakina/Views/AdminLayout/AdminSideBarPartial.cshtml
+++ b/AlpayMakina/AlpayMakina/Views/AdminLayout/AdminSideBarPartial.cshtml
@@ -27,8 +27,9 @@
                 <li><a href="/Admin/Category/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Kategori</span></a></li>
                 <li><a href="/Admin/SubCategory/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Alt Kategori</span></a></li>
                 <li><a href="/Admin/Product/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Ürünler</span></a></li>
+                <li><a href="/Admin/UserSettings/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Kullanıcılar</span></a></li>
                 <li><a href="/Admin/Settings/Index/" class="waves-effect"><i class="fas fa-plug"></i><span>Ayarlar</span></a></li>
-                <li><a href="/admin/AdminLocation/Index/" class="waves-effect"><i class="fas fa-window-close"></i><span>Çıkış Yap</span></a></li>
+                <li><a href="/Login/Logout/" class="waves-effect"><i class="fas fa-window-close"></i><span>Çıkış Yap</span></a></li>
                 @* <li><a href="/admin/AdminAbout/Index/" class="waves-effect"><i class="fas fa-info"></i><span>Hakkımızda</span></a></li>
                 <li><a href="/admin/AdminContact/Index/" class="waves-effect"><i class="fas fa-phone"></i><span>İletişim</span></a></li>
                 <li><a href="/admin/AdminLocation/Index/" class="waves-effect"><i class="fas fa-map-marker-alt"></i><span>Hizmetler</span></a></li> *@
