--- a/AlpayMakina/AlpayMakina/Views/_ViewImports.cshtml
+++ b/AlpayMakina/AlpayMakina/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using AlpayMakina.Models
 @using AlpayMakina.Dtos.SocialMediaDtos
 @using AlpayMakina.Dtos.CompanyInformationDtos
+@using AlpayMakina.Dtos.AuthDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
