--- a/AlpayMakina/AlpayMakina/Areas/UI/Views/_ViewImports.cshtml
+++ b/AlpayMakina/AlpayMakina/Areas/UI/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using AlpayMakina.Dtos.SliderDtos
 @using AlpayMakina.Dtos.CategoryDtos
 @using AlpayMakina.Dtos.ProductDtos
+@using AlpayMakina.Dtos.ProductDetailDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
