--- a/AlpayMakina/AlpayMakina/Areas/UI/Views/Shared/Components/_Products_Home_ComponentPartial/Default.cshtml
+++ b/AlpayMakina/AlpayMakina/Areas/UI/Views/Shared/Components/_Products_Home_ComponentPartial/Default.cshtml
@@ -7,18 +7,18 @@
 	{
 		<div class="col-sm-4">
 			<div  class="product-image-wrapper">
-				<div  class="single-products">
-					<div class="productinfo text-center">
-						<img src="/Product/@item.ImageUrl" alt="" />
+                <div  class="single-products">
+					<div  class="productinfo text-center">
+						<img style="height:200px;width:200px" src="/Product/@item.ImageUrl" alt="" />
 						<h2>@String.Format("{0:N2}", @item.Price)<span>@item.Currency</span></h2>
 						<p style="overflow:hidden;text-overflow:ellipsis;white-space:nowrap" >@item.Title</p>
-						<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Ürün Detayları</a>
+						<a href="/UI/ProductDetail/Index/@item.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Ürün Detayları</a>
 					</div>
 					<div class="product-overlay">
 						<div class="overlay-content">
 							<h2>@String.Format("{0:N2}", @item.Price)<span>@item.Currency</span></h2>
 							<p>@item.Title</p>
-							<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Ürün Detayları</a>
+							<a href="/UI/ProductDetail/Index/@item.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Ürün Detayları</a>
 						</div>
 					</div>
 				</div>
@@ -29,33 +29,4 @@
 			</div>
 		</div>
 	}
-
-	
-
-	@* <div class="col-sm-4">
-		<div class="product-image-wrapper">
-			<div class="single-products">
-				<div class="productinfo text-center">
-					<img src="images/home/product6.jpg" alt="" />
-					<h2>$56</h2>
-					<p>Easy Polo Black Edition</p>
-					<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-				</div>
-				<div class="product-overlay">
-					<div class="overlay-content">
-						<h2>$56</h2>
-						<p>Easy Polo Black Edition</p>
-						<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-					</div>
-				</div>
-			</div>
-			<div class="choose">
-				<ul class="nav nav-pills nav-justified">
-					<li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-					<li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-				</ul>
-			</div>
-		</div>
-	</div> *@
-
 </div><!--features_items-->
