--- a/AlpayMakina/AlpayMakina/Views/AdminLayout/AdminSideBarPartial.cshtml
+++ b/AlpayMakina/AlpayMakina/Views/AdminLayout/AdminSideBarPartial.cshtml
@@ -26,6 +26,8 @@
                 <li><a href="/Admin/Category/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Kategori</span></a></li>
                 <li><a href="/Admin/SubCategory/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Alt Kategori</span></a></li>
                 <li><a href="/Admin/Product/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Ürünler</span></a></li>
+                <li><a href="/Admin/About/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Hakkımızda Sayfası</span></a></li>
+                <li><a href="/Admin/Contact/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>İletişim Sayfası</span></a></li>
                 <li><a href="/Admin/UserSettings/Index/" class="waves-effect"><i class="fas fa-tv"></i><span>Kullanıcılar</span></a></li>
                 <li><a href="/Login/Logout/" class="waves-effect"><i class="fas fa-window-close"></i><span>Çıkış Yap</span></a></li>
                 @* <li><a href="/admin/AdminAbout/Index/" class="waves-effect"><i class="fas fa-info"></i><span>Hakkımızda</span></a></li>
