--- a/AlpayMakina/AlpayMakina/Areas/Admin/_ViewImports.cshtml
+++ b/AlpayMakina/AlpayMakina/Areas/Admin/_ViewImports.cshtml
@@ -7,5 +7,7 @@
 @using AlpayMakina.Dtos.CompanyInformationDtos
 @using AlpayMakina.Dtos.SubCategoryDtos
 @using AlpayMakina.Dtos.UserDtos
+@using AlpayMakina.Dtos.ContactDtos
+@using AlpayMakina.Dtos.AboutDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
