--- a/AlpayMakina/AlpayMakina/Areas/UI/Views/_ViewImports.cshtml
+++ b/AlpayMakina/AlpayMakina/Areas/UI/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using AlpayMakina.Dtos.CategoryDtos
 @using AlpayMakina.Dtos.ProductDtos
 @using AlpayMakina.Dtos.ProductDetailDtos
+@using AlpayMakina.Dtos.AboutDtos
+@using AlpayMakina.Dtos.ContactDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
