--- a/AlpayMakina/AlpayMakina/Views/Shared/Components/_Head_UILayout_ComponentPartial/Default.cshtml
+++ b/AlpayMakina/AlpayMakina/Views/Shared/Components/_Head_UILayout_ComponentPartial/Default.cshtml
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Alpay Makina</title>
+    <title>AGF Alpay Makina</title>
     <link href="~/Eshopper/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/Eshopper/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Eshopper/css/prettyPhoto.css" rel="stylesheet">
